# sillytavern-launcher-mobile

./: .gitattributes  .gitignore  LICENSE  README.md  app.jks  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/cn/al01/sillytavern_launcher/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/lib/git/arm64-v8a/libexec/git-core/: git-commit-graph  git-credential-cache  git-credential-cache--daemon  git-credential-store  git-daemon  git-fast-import  git-http-backend  git-http-fetch  git-imap-send  git-remote-http  git-remote-testsvn  git-sh-i18n--envsubst
app/src/main/assets/lib/git/armeabi-v7a/libexec/git-core/: git-credential  git-credential-cache  git-credential-cache--daemon  git-credential-store  git-daemon  git-fast-import  git-http-backend  git-http-fetch  git-imap-send  git-remote-ftps  git-remote-testsvn  git-sh-i18n--envsubst
app/src/main/assets/lib/git/x86_64/libexec/git-core/: git-credential-cache  git-credential-cache--daemon  git-credential-store  git-daemon  git-fast-import  git-fmt-merge-msg  git-http-backend  git-http-fetch  git-imap-send  git-remote-https  git-remote-testsvn  git-sh-i18n--envsubst
app/src/main/assets/lib/libidn2/armeabi-v7a/pkgconfig/: libidn2.pc
app/src/main/assets/st_config/: settings.json
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/libgit2/x86_64/pkgconfig/: libgit2.pc
app/src/main/java/cn/al01/sillytavern_launcher/: GitManager.java  MainActivity.java  Polyfill.java  SillyTavern.java
app/src/main/res/layout/: activity_main.xml  dialog_progress.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/test/java/cn/al01/sillytavern_launcher/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
